--- a/WolvenKit/Views/Editor/Documents/DocumentView.xaml
+++ b/WolvenKit/Views/Editor/Documents/DocumentView.xaml
@@ -351,6 +351,30 @@
                                 <TextBlock Padding="5" Text="{Binding Property.Value}" />
                             </DataTemplate>
 
+                            <DataTemplate x:Key="StringTemplateView">
+                                <TextBox
+                                    Height="22"
+                                    Margin="0"
+                                    Padding="3,3,0,0"
+                                    VerticalAlignment="Center"
+                                    Background="Transparent"
+                                    BorderBrush="Transparent"
+                                    Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
+                                    Text="{Binding Property.Value}" />
+                            </DataTemplate>
+
+                            <DataTemplate x:Key="RefTemplateView">
+                                <TextBox
+                                    Height="22"
+                                    Margin="0"
+                                    Padding="3,3,0,0"
+                                    VerticalAlignment="Center"
+                                    Background="Transparent"
+                                    BorderBrush="Transparent"
+                                    Style="{DynamicResource MahApps.Styles.TextBox.DataGrid.Editing}"
+                                    Text="{Binding Property.DepotPath}" />
+                            </DataTemplate>
+
                             <DataTemplate x:Key="RedboolTemplate">
                                 <CheckBox
                                     Margin="0"
@@ -382,18 +406,22 @@
 
                             <templates:EditableVariableDataTemplateSelector
                                 x:Key="DataTemplateSelector"
-                                ArrayTemplateView="{StaticResource CommmonTemplate}"
                                 CommmonTemplate="{StaticResource CommmonTemplate}"
                                 EnumTemplate="{StaticResource EnumTemplate}"
                                 HandleTemplateView="{StaticResource HandleTemplate}"
                                 NumericTemplate="{StaticResource NumericTemplate}"
-                                RedboolTemplate="{StaticResource RedboolTemplate}" />
+                                RedboolTemplate="{StaticResource RedboolTemplate}"
+                                RefTemplateView="{StaticResource RefTemplateView}"
+                                StringTemplateView="{StaticResource StringTemplateView}"
+                                />
+
+                            <converters1:CellStyleConverter x:Key="converter" />
                         </Grid.Resources>
 
-                        <Grid.ColumnDefinitions>
+                        <!--<Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
+                        </Grid.ColumnDefinitions>-->
                         
                         <syncfusion:SfTreeGrid
                             AllowFiltering="True"
@@ -409,9 +437,15 @@
                                     AllowEditing="False"
                                     ColumnSizer="SizeToCells"
                                     HeaderText="Name"
-                                    MappingName="Name" />
+                                    MappingName="Name">
+                                    <syncfusion:TreeGridTextColumn.CellStyle>
+                                        <Style TargetType="syncfusion:TreeGridCell">
+                                            <Setter Property="Background" Value="{Binding Converter={StaticResource converter}}"/>
+                                        </Style>
+                                    </syncfusion:TreeGridTextColumn.CellStyle>
+                                </syncfusion:TreeGridTextColumn>
                                 <syncfusion:TreeGridTemplateColumn
-                                    AllowEditing="False"
+                                    AllowEditing="True"
                                     AllowSorting="False"
                                     CellTemplateSelector="{StaticResource DataTemplateSelector}"
                                     ColumnSizer="FillColumn"
@@ -422,13 +456,18 @@
                                     ColumnSizer="SizeToCells"
                                     HeaderText="Type"
                                     MappingName="Type" />
+		                        <syncfusion:TreeGridCheckBoxColumn
+                                    MappingName="IsSerialized"
+                                    AllowEditing="false"
+                                    HeaderText="Serialized"
+                                    ColumnSizer="SizeToHeader"/>
 
                             </syncfusion:SfTreeGrid.Columns>
 
 
                         </syncfusion:SfTreeGrid>
 
-                        <syncfusion:PropertyGrid
+                        <!--<syncfusion:PropertyGrid
                             x:Name="PropertyGrid"
                             Grid.Column="1"
                             SelectedObject="{Binding SelectedChunk.Data}"
@@ -436,7 +475,7 @@
                             AutoGeneratingPropertyGridItem="PropertyGrid_AutoGeneratingPropertyGridItem"
                             >
                             
-                        </syncfusion:PropertyGrid>
+                        </syncfusion:PropertyGrid>-->
                     </Grid>
 
                 </Grid>
